@@ -49,7 +49,7 @@ public:
      * @brief Get application name.
      * @return Application name.
      */
-    QString getName() const {
+    const QString& getName() const {
         return mName;
     }
 
@@ -57,7 +57,7 @@ public:
      * @brief Get application path.
      * @return Application path.
      */
-    QString getPath() const {
+    const QString& getPath() const {
         return mPath;
     }
 
@@ -65,7 +65,7 @@ public:
      * @brief Get application command line parameters.
      * @return Application command line parameters.
      */
-    QString getParameters() const {
+    const QString& getParameters() const {
         return mParameters;
     }
 
