@@ -134,7 +134,7 @@ public:
      * @return Directory containing source files
      */
 
-    QString getCheckDirectory();
+    const QString& getCheckDirectory();
 
     /**
      * @brief Check if there are any visible results in view.
